parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> TkOBlock declaration_list TkSemicolon statement_list TkCBlock
Rule 2     declaration_list -> declaration_list TkSemicolon declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> TkInt variable_list
Rule 5     declaration -> TkBool variable_list
Rule 6     declaration -> TkFunction TkOBracket TkSoForth TkNum TkCBracket variable_list
Rule 7     variable_list -> variable_list TkComma variable
Rule 8     variable_list -> variable
Rule 9     variable -> TkId
Rule 10    statement_list -> statement_list TkSemicolon statement
Rule 11    statement_list -> statement
Rule 12    statement -> TkId TkAsig expression
Rule 13    statement -> TkId TkAsig expression_list
Rule 14    statement -> TkId TkAsig function_mod
Rule 15    statement -> TkIf if_body TkFi
Rule 16    if_body -> if_body TkGuard expression TkArrow statement_list
Rule 17    if_body -> expression TkArrow statement_list
Rule 18    statement -> TkWhile expression TkArrow statement_list TkEnd
Rule 19    statement -> TkPrint expression
Rule 20    statement -> TkPrint string
Rule 21    statement -> TkSkip
Rule 22    string -> string TkPlus string
Rule 23    string -> string TkPlus expression
Rule 24    string -> expression TkPlus string
Rule 25    string -> TkString
Rule 26    string -> TkOpenPar TkString TkClosePar
Rule 27    statement -> program
Rule 28    expression_list -> expression_list TkComma expression
Rule 29    expression_list -> expression TkComma expression
Rule 30    expression -> expression TkPlus expression
Rule 31    expression -> expression TkMinus expression
Rule 32    expression -> expression TkMult expression
Rule 33    expression -> expression TkAnd expression
Rule 34    expression -> expression TkOr expression
Rule 35    expression -> expression TkEqual expression
Rule 36    expression -> expression TkNEqual expression
Rule 37    expression -> TkNot expression
Rule 38    expression -> TkMinus expression
Rule 39    expression -> expression TkLess expression
Rule 40    expression -> expression TkGreater expression
Rule 41    expression -> expression TkLeq expression
Rule 42    expression -> expression TkGeq expression
Rule 43    expression -> TkId TkApp expression
Rule 44    expression -> function_mod TkApp expression
Rule 45    function_mod -> function_mod TkOpenPar two_points TkClosePar
Rule 46    function_mod -> TkId TkOpenPar two_points TkClosePar
Rule 47    two_points -> expression TkTwoPoints expression
Rule 48    expression -> TkNum
Rule 49    expression -> TkId
Rule 50    expression -> TkOpenPar expression TkClosePar
Rule 51    expression -> TkTrue
Rule 52    expression -> TkFalse

Terminals, with rules where they appear

TkAnd                : 33
TkApp                : 43 44
TkArrow              : 16 17 18
TkAsig               : 12 13 14
TkBool               : 5
TkCBlock             : 1
TkCBracket           : 6
TkClosePar           : 26 45 46 50
TkComma              : 7 28 29
TkEnd                : 18
TkEqual              : 35
TkFalse              : 52
TkFi                 : 15
TkFunction           : 6
TkGeq                : 42
TkGreater            : 40
TkGuard              : 16
TkId                 : 9 12 13 14 43 46 49
TkIf                 : 15
TkInt                : 4
TkLeq                : 41
TkLess               : 39
TkMinus              : 31 38
TkMult               : 32
TkNEqual             : 36
TkNot                : 37
TkNum                : 6 48
TkOBlock             : 1
TkOBracket           : 6
TkOpenPar            : 26 45 46 50
TkOr                 : 34
TkPlus               : 22 23 24 30
TkPrint              : 19 20
TkSemicolon          : 1 2 10
TkSkip               : 21
TkSoForth            : 6
TkString             : 25 26
TkTrue               : 51
TkTwoPoints          : 47
TkWhile              : 18
error                : 

Nonterminals, with rules where they appear

declaration          : 2 3
declaration_list     : 1 2
expression           : 12 16 17 18 19 23 24 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 38 39 39 40 40 41 41 42 42 43 44 47 47 50
expression_list      : 13 28
function_mod         : 14 44 45
if_body              : 15 16
program              : 27 0
statement            : 10 11
statement_list       : 1 10 16 17 18
string               : 20 22 22 23 24
two_points           : 45 46
variable             : 7 8
variable_list        : 4 5 6 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . TkOBlock declaration_list TkSemicolon statement_list TkCBlock

    TkOBlock        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> TkOBlock . declaration_list TkSemicolon statement_list TkCBlock
    (2) declaration_list -> . declaration_list TkSemicolon declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . TkInt variable_list
    (5) declaration -> . TkBool variable_list
    (6) declaration -> . TkFunction TkOBracket TkSoForth TkNum TkCBracket variable_list

    TkInt           shift and go to state 5
    TkBool          shift and go to state 6
    TkFunction      shift and go to state 7

    declaration_list               shift and go to state 3
    declaration                    shift and go to state 4

state 3

    (1) program -> TkOBlock declaration_list . TkSemicolon statement_list TkCBlock
    (2) declaration_list -> declaration_list . TkSemicolon declaration

    TkSemicolon     shift and go to state 8


state 4

    (3) declaration_list -> declaration .

    TkSemicolon     reduce using rule 3 (declaration_list -> declaration .)


state 5

    (4) declaration -> TkInt . variable_list
    (7) variable_list -> . variable_list TkComma variable
    (8) variable_list -> . variable
    (9) variable -> . TkId

    TkId            shift and go to state 11

    variable_list                  shift and go to state 9
    variable                       shift and go to state 10

state 6

    (5) declaration -> TkBool . variable_list
    (7) variable_list -> . variable_list TkComma variable
    (8) variable_list -> . variable
    (9) variable -> . TkId

    TkId            shift and go to state 11

    variable_list                  shift and go to state 12
    variable                       shift and go to state 10

state 7

    (6) declaration -> TkFunction . TkOBracket TkSoForth TkNum TkCBracket variable_list

    TkOBracket      shift and go to state 13


state 8

    (1) program -> TkOBlock declaration_list TkSemicolon . statement_list TkCBlock
    (2) declaration_list -> declaration_list TkSemicolon . declaration
    (10) statement_list -> . statement_list TkSemicolon statement
    (11) statement_list -> . statement
    (4) declaration -> . TkInt variable_list
    (5) declaration -> . TkBool variable_list
    (6) declaration -> . TkFunction TkOBracket TkSoForth TkNum TkCBracket variable_list
    (12) statement -> . TkId TkAsig expression
    (13) statement -> . TkId TkAsig expression_list
    (14) statement -> . TkId TkAsig function_mod
    (15) statement -> . TkIf if_body TkFi
    (18) statement -> . TkWhile expression TkArrow statement_list TkEnd
    (19) statement -> . TkPrint expression
    (20) statement -> . TkPrint string
    (21) statement -> . TkSkip
    (27) statement -> . program
    (1) program -> . TkOBlock declaration_list TkSemicolon statement_list TkCBlock

    TkInt           shift and go to state 5
    TkBool          shift and go to state 6
    TkFunction      shift and go to state 7
    TkId            shift and go to state 17
    TkIf            shift and go to state 18
    TkWhile         shift and go to state 19
    TkPrint         shift and go to state 20
    TkSkip          shift and go to state 21
    TkOBlock        shift and go to state 2

    statement_list                 shift and go to state 14
    declaration                    shift and go to state 15
    statement                      shift and go to state 16
    program                        shift and go to state 22

state 9

    (4) declaration -> TkInt variable_list .
    (7) variable_list -> variable_list . TkComma variable

    TkSemicolon     reduce using rule 4 (declaration -> TkInt variable_list .)
    TkComma         shift and go to state 23


state 10

    (8) variable_list -> variable .

    TkComma         reduce using rule 8 (variable_list -> variable .)
    TkSemicolon     reduce using rule 8 (variable_list -> variable .)


state 11

    (9) variable -> TkId .

    TkComma         reduce using rule 9 (variable -> TkId .)
    TkSemicolon     reduce using rule 9 (variable -> TkId .)


state 12

    (5) declaration -> TkBool variable_list .
    (7) variable_list -> variable_list . TkComma variable

    TkSemicolon     reduce using rule 5 (declaration -> TkBool variable_list .)
    TkComma         shift and go to state 23


state 13

    (6) declaration -> TkFunction TkOBracket . TkSoForth TkNum TkCBracket variable_list

    TkSoForth       shift and go to state 24


state 14

    (1) program -> TkOBlock declaration_list TkSemicolon statement_list . TkCBlock
    (10) statement_list -> statement_list . TkSemicolon statement

    TkCBlock        shift and go to state 26
    TkSemicolon     shift and go to state 25


state 15

    (2) declaration_list -> declaration_list TkSemicolon declaration .

    TkSemicolon     reduce using rule 2 (declaration_list -> declaration_list TkSemicolon declaration .)


state 16

    (11) statement_list -> statement .

    TkCBlock        reduce using rule 11 (statement_list -> statement .)
    TkSemicolon     reduce using rule 11 (statement_list -> statement .)
    TkFi            reduce using rule 11 (statement_list -> statement .)
    TkGuard         reduce using rule 11 (statement_list -> statement .)
    TkEnd           reduce using rule 11 (statement_list -> statement .)


state 17

    (12) statement -> TkId . TkAsig expression
    (13) statement -> TkId . TkAsig expression_list
    (14) statement -> TkId . TkAsig function_mod

    TkAsig          shift and go to state 27


state 18

    (15) statement -> TkIf . if_body TkFi
    (16) if_body -> . if_body TkGuard expression TkArrow statement_list
    (17) if_body -> . expression TkArrow statement_list
    (30) expression -> . expression TkPlus expression
    (31) expression -> . expression TkMinus expression
    (32) expression -> . expression TkMult expression
    (33) expression -> . expression TkAnd expression
    (34) expression -> . expression TkOr expression
    (35) expression -> . expression TkEqual expression
    (36) expression -> . expression TkNEqual expression
    (37) expression -> . TkNot expression
    (38) expression -> . TkMinus expression
    (39) expression -> . expression TkLess expression
    (40) expression -> . expression TkGreater expression
    (41) expression -> . expression TkLeq expression
    (42) expression -> . expression TkGeq expression
    (43) expression -> . TkId TkApp expression
    (44) expression -> . function_mod TkApp expression
    (48) expression -> . TkNum
    (49) expression -> . TkId
    (50) expression -> . TkOpenPar expression TkClosePar
    (51) expression -> . TkTrue
    (52) expression -> . TkFalse
    (45) function_mod -> . function_mod TkOpenPar two_points TkClosePar
    (46) function_mod -> . TkId TkOpenPar two_points TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkNum           shift and go to state 34
    TkOpenPar       shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    if_body                        shift and go to state 28
    expression                     shift and go to state 29
    function_mod                   shift and go to state 33

state 19

    (18) statement -> TkWhile . expression TkArrow statement_list TkEnd
    (30) expression -> . expression TkPlus expression
    (31) expression -> . expression TkMinus expression
    (32) expression -> . expression TkMult expression
    (33) expression -> . expression TkAnd expression
    (34) expression -> . expression TkOr expression
    (35) expression -> . expression TkEqual expression
    (36) expression -> . expression TkNEqual expression
    (37) expression -> . TkNot expression
    (38) expression -> . TkMinus expression
    (39) expression -> . expression TkLess expression
    (40) expression -> . expression TkGreater expression
    (41) expression -> . expression TkLeq expression
    (42) expression -> . expression TkGeq expression
    (43) expression -> . TkId TkApp expression
    (44) expression -> . function_mod TkApp expression
    (48) expression -> . TkNum
    (49) expression -> . TkId
    (50) expression -> . TkOpenPar expression TkClosePar
    (51) expression -> . TkTrue
    (52) expression -> . TkFalse
    (45) function_mod -> . function_mod TkOpenPar two_points TkClosePar
    (46) function_mod -> . TkId TkOpenPar two_points TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkNum           shift and go to state 34
    TkOpenPar       shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 38
    function_mod                   shift and go to state 33

state 20

    (19) statement -> TkPrint . expression
    (20) statement -> TkPrint . string
    (30) expression -> . expression TkPlus expression
    (31) expression -> . expression TkMinus expression
    (32) expression -> . expression TkMult expression
    (33) expression -> . expression TkAnd expression
    (34) expression -> . expression TkOr expression
    (35) expression -> . expression TkEqual expression
    (36) expression -> . expression TkNEqual expression
    (37) expression -> . TkNot expression
    (38) expression -> . TkMinus expression
    (39) expression -> . expression TkLess expression
    (40) expression -> . expression TkGreater expression
    (41) expression -> . expression TkLeq expression
    (42) expression -> . expression TkGeq expression
    (43) expression -> . TkId TkApp expression
    (44) expression -> . function_mod TkApp expression
    (48) expression -> . TkNum
    (49) expression -> . TkId
    (50) expression -> . TkOpenPar expression TkClosePar
    (51) expression -> . TkTrue
    (52) expression -> . TkFalse
    (22) string -> . string TkPlus string
    (23) string -> . string TkPlus expression
    (24) string -> . expression TkPlus string
    (25) string -> . TkString
    (26) string -> . TkOpenPar TkString TkClosePar
    (45) function_mod -> . function_mod TkOpenPar two_points TkClosePar
    (46) function_mod -> . TkId TkOpenPar two_points TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkNum           shift and go to state 34
    TkOpenPar       shift and go to state 41
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37
    TkString        shift and go to state 42

    expression                     shift and go to state 39
    string                         shift and go to state 40
    function_mod                   shift and go to state 33

state 21

    (21) statement -> TkSkip .

    TkCBlock        reduce using rule 21 (statement -> TkSkip .)
    TkSemicolon     reduce using rule 21 (statement -> TkSkip .)
    TkFi            reduce using rule 21 (statement -> TkSkip .)
    TkGuard         reduce using rule 21 (statement -> TkSkip .)
    TkEnd           reduce using rule 21 (statement -> TkSkip .)


state 22

    (27) statement -> program .

    TkCBlock        reduce using rule 27 (statement -> program .)
    TkSemicolon     reduce using rule 27 (statement -> program .)
    TkFi            reduce using rule 27 (statement -> program .)
    TkGuard         reduce using rule 27 (statement -> program .)
    TkEnd           reduce using rule 27 (statement -> program .)


state 23

    (7) variable_list -> variable_list TkComma . variable
    (9) variable -> . TkId

    TkId            shift and go to state 11

    variable                       shift and go to state 43

state 24

    (6) declaration -> TkFunction TkOBracket TkSoForth . TkNum TkCBracket variable_list

    TkNum           shift and go to state 44


state 25

    (10) statement_list -> statement_list TkSemicolon . statement
    (12) statement -> . TkId TkAsig expression
    (13) statement -> . TkId TkAsig expression_list
    (14) statement -> . TkId TkAsig function_mod
    (15) statement -> . TkIf if_body TkFi
    (18) statement -> . TkWhile expression TkArrow statement_list TkEnd
    (19) statement -> . TkPrint expression
    (20) statement -> . TkPrint string
    (21) statement -> . TkSkip
    (27) statement -> . program
    (1) program -> . TkOBlock declaration_list TkSemicolon statement_list TkCBlock

    TkId            shift and go to state 17
    TkIf            shift and go to state 18
    TkWhile         shift and go to state 19
    TkPrint         shift and go to state 20
    TkSkip          shift and go to state 21
    TkOBlock        shift and go to state 2

    statement                      shift and go to state 45
    program                        shift and go to state 22

state 26

    (1) program -> TkOBlock declaration_list TkSemicolon statement_list TkCBlock .

    $end            reduce using rule 1 (program -> TkOBlock declaration_list TkSemicolon statement_list TkCBlock .)
    TkCBlock        reduce using rule 1 (program -> TkOBlock declaration_list TkSemicolon statement_list TkCBlock .)
    TkSemicolon     reduce using rule 1 (program -> TkOBlock declaration_list TkSemicolon statement_list TkCBlock .)
    TkFi            reduce using rule 1 (program -> TkOBlock declaration_list TkSemicolon statement_list TkCBlock .)
    TkGuard         reduce using rule 1 (program -> TkOBlock declaration_list TkSemicolon statement_list TkCBlock .)
    TkEnd           reduce using rule 1 (program -> TkOBlock declaration_list TkSemicolon statement_list TkCBlock .)


state 27

    (12) statement -> TkId TkAsig . expression
    (13) statement -> TkId TkAsig . expression_list
    (14) statement -> TkId TkAsig . function_mod
    (30) expression -> . expression TkPlus expression
    (31) expression -> . expression TkMinus expression
    (32) expression -> . expression TkMult expression
    (33) expression -> . expression TkAnd expression
    (34) expression -> . expression TkOr expression
    (35) expression -> . expression TkEqual expression
    (36) expression -> . expression TkNEqual expression
    (37) expression -> . TkNot expression
    (38) expression -> . TkMinus expression
    (39) expression -> . expression TkLess expression
    (40) expression -> . expression TkGreater expression
    (41) expression -> . expression TkLeq expression
    (42) expression -> . expression TkGeq expression
    (43) expression -> . TkId TkApp expression
    (44) expression -> . function_mod TkApp expression
    (48) expression -> . TkNum
    (49) expression -> . TkId
    (50) expression -> . TkOpenPar expression TkClosePar
    (51) expression -> . TkTrue
    (52) expression -> . TkFalse
    (28) expression_list -> . expression_list TkComma expression
    (29) expression_list -> . expression TkComma expression
    (45) function_mod -> . function_mod TkOpenPar two_points TkClosePar
    (46) function_mod -> . TkId TkOpenPar two_points TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkNum           shift and go to state 34
    TkOpenPar       shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 46
    expression_list                shift and go to state 47
    function_mod                   shift and go to state 48

state 28

    (15) statement -> TkIf if_body . TkFi
    (16) if_body -> if_body . TkGuard expression TkArrow statement_list

    TkFi            shift and go to state 49
    TkGuard         shift and go to state 50


state 29

    (17) if_body -> expression . TkArrow statement_list
    (30) expression -> expression . TkPlus expression
    (31) expression -> expression . TkMinus expression
    (32) expression -> expression . TkMult expression
    (33) expression -> expression . TkAnd expression
    (34) expression -> expression . TkOr expression
    (35) expression -> expression . TkEqual expression
    (36) expression -> expression . TkNEqual expression
    (39) expression -> expression . TkLess expression
    (40) expression -> expression . TkGreater expression
    (41) expression -> expression . TkLeq expression
    (42) expression -> expression . TkGeq expression

    TkArrow         shift and go to state 51
    TkPlus          shift and go to state 52
    TkMinus         shift and go to state 53
    TkMult          shift and go to state 54
    TkAnd           shift and go to state 55
    TkOr            shift and go to state 56
    TkEqual         shift and go to state 57
    TkNEqual        shift and go to state 58
    TkLess          shift and go to state 59
    TkGreater       shift and go to state 60
    TkLeq           shift and go to state 61
    TkGeq           shift and go to state 62


state 30

    (38) expression -> TkMinus . expression
    (30) expression -> . expression TkPlus expression
    (31) expression -> . expression TkMinus expression
    (32) expression -> . expression TkMult expression
    (33) expression -> . expression TkAnd expression
    (34) expression -> . expression TkOr expression
    (35) expression -> . expression TkEqual expression
    (36) expression -> . expression TkNEqual expression
    (37) expression -> . TkNot expression
    (38) expression -> . TkMinus expression
    (39) expression -> . expression TkLess expression
    (40) expression -> . expression TkGreater expression
    (41) expression -> . expression TkLeq expression
    (42) expression -> . expression TkGeq expression
    (43) expression -> . TkId TkApp expression
    (44) expression -> . function_mod TkApp expression
    (48) expression -> . TkNum
    (49) expression -> . TkId
    (50) expression -> . TkOpenPar expression TkClosePar
    (51) expression -> . TkTrue
    (52) expression -> . TkFalse
    (45) function_mod -> . function_mod TkOpenPar two_points TkClosePar
    (46) function_mod -> . TkId TkOpenPar two_points TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkNum           shift and go to state 34
    TkOpenPar       shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 63
    function_mod                   shift and go to state 33

state 31

    (37) expression -> TkNot . expression
    (30) expression -> . expression TkPlus expression
    (31) expression -> . expression TkMinus expression
    (32) expression -> . expression TkMult expression
    (33) expression -> . expression TkAnd expression
    (34) expression -> . expression TkOr expression
    (35) expression -> . expression TkEqual expression
    (36) expression -> . expression TkNEqual expression
    (37) expression -> . TkNot expression
    (38) expression -> . TkMinus expression
    (39) expression -> . expression TkLess expression
    (40) expression -> . expression TkGreater expression
    (41) expression -> . expression TkLeq expression
    (42) expression -> . expression TkGeq expression
    (43) expression -> . TkId TkApp expression
    (44) expression -> . function_mod TkApp expression
    (48) expression -> . TkNum
    (49) expression -> . TkId
    (50) expression -> . TkOpenPar expression TkClosePar
    (51) expression -> . TkTrue
    (52) expression -> . TkFalse
    (45) function_mod -> . function_mod TkOpenPar two_points TkClosePar
    (46) function_mod -> . TkId TkOpenPar two_points TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkNum           shift and go to state 34
    TkOpenPar       shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 64
    function_mod                   shift and go to state 33

state 32

    (43) expression -> TkId . TkApp expression
    (49) expression -> TkId .
    (46) function_mod -> TkId . TkOpenPar two_points TkClosePar

    TkApp           shift and go to state 65
    TkArrow         reduce using rule 49 (expression -> TkId .)
    TkPlus          reduce using rule 49 (expression -> TkId .)
    TkMinus         reduce using rule 49 (expression -> TkId .)
    TkMult          reduce using rule 49 (expression -> TkId .)
    TkAnd           reduce using rule 49 (expression -> TkId .)
    TkOr            reduce using rule 49 (expression -> TkId .)
    TkEqual         reduce using rule 49 (expression -> TkId .)
    TkNEqual        reduce using rule 49 (expression -> TkId .)
    TkLess          reduce using rule 49 (expression -> TkId .)
    TkGreater       reduce using rule 49 (expression -> TkId .)
    TkLeq           reduce using rule 49 (expression -> TkId .)
    TkGeq           reduce using rule 49 (expression -> TkId .)
    TkCBlock        reduce using rule 49 (expression -> TkId .)
    TkSemicolon     reduce using rule 49 (expression -> TkId .)
    TkFi            reduce using rule 49 (expression -> TkId .)
    TkGuard         reduce using rule 49 (expression -> TkId .)
    TkEnd           reduce using rule 49 (expression -> TkId .)
    TkComma         reduce using rule 49 (expression -> TkId .)
    TkClosePar      reduce using rule 49 (expression -> TkId .)
    TkTwoPoints     reduce using rule 49 (expression -> TkId .)
    TkOpenPar       shift and go to state 66


state 33

    (44) expression -> function_mod . TkApp expression
    (45) function_mod -> function_mod . TkOpenPar two_points TkClosePar

    TkApp           shift and go to state 67
    TkOpenPar       shift and go to state 68


state 34

    (48) expression -> TkNum .

    TkArrow         reduce using rule 48 (expression -> TkNum .)
    TkPlus          reduce using rule 48 (expression -> TkNum .)
    TkMinus         reduce using rule 48 (expression -> TkNum .)
    TkMult          reduce using rule 48 (expression -> TkNum .)
    TkAnd           reduce using rule 48 (expression -> TkNum .)
    TkOr            reduce using rule 48 (expression -> TkNum .)
    TkEqual         reduce using rule 48 (expression -> TkNum .)
    TkNEqual        reduce using rule 48 (expression -> TkNum .)
    TkLess          reduce using rule 48 (expression -> TkNum .)
    TkGreater       reduce using rule 48 (expression -> TkNum .)
    TkLeq           reduce using rule 48 (expression -> TkNum .)
    TkGeq           reduce using rule 48 (expression -> TkNum .)
    TkCBlock        reduce using rule 48 (expression -> TkNum .)
    TkSemicolon     reduce using rule 48 (expression -> TkNum .)
    TkFi            reduce using rule 48 (expression -> TkNum .)
    TkGuard         reduce using rule 48 (expression -> TkNum .)
    TkEnd           reduce using rule 48 (expression -> TkNum .)
    TkComma         reduce using rule 48 (expression -> TkNum .)
    TkClosePar      reduce using rule 48 (expression -> TkNum .)
    TkTwoPoints     reduce using rule 48 (expression -> TkNum .)


state 35

    (50) expression -> TkOpenPar . expression TkClosePar
    (30) expression -> . expression TkPlus expression
    (31) expression -> . expression TkMinus expression
    (32) expression -> . expression TkMult expression
    (33) expression -> . expression TkAnd expression
    (34) expression -> . expression TkOr expression
    (35) expression -> . expression TkEqual expression
    (36) expression -> . expression TkNEqual expression
    (37) expression -> . TkNot expression
    (38) expression -> . TkMinus expression
    (39) expression -> . expression TkLess expression
    (40) expression -> . expression TkGreater expression
    (41) expression -> . expression TkLeq expression
    (42) expression -> . expression TkGeq expression
    (43) expression -> . TkId TkApp expression
    (44) expression -> . function_mod TkApp expression
    (48) expression -> . TkNum
    (49) expression -> . TkId
    (50) expression -> . TkOpenPar expression TkClosePar
    (51) expression -> . TkTrue
    (52) expression -> . TkFalse
    (45) function_mod -> . function_mod TkOpenPar two_points TkClosePar
    (46) function_mod -> . TkId TkOpenPar two_points TkClosePar

    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkNum           shift and go to state 34
    TkOpenPar       shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 69
    function_mod                   shift and go to state 33

state 36

    (51) expression -> TkTrue .

    TkArrow         reduce using rule 51 (expression -> TkTrue .)
    TkPlus          reduce using rule 51 (expression -> TkTrue .)
    TkMinus         reduce using rule 51 (expression -> TkTrue .)
    TkMult          reduce using rule 51 (expression -> TkTrue .)
    TkAnd           reduce using rule 51 (expression -> TkTrue .)
    TkOr            reduce using rule 51 (expression -> TkTrue .)
    TkEqual         reduce using rule 51 (expression -> TkTrue .)
    TkNEqual        reduce using rule 51 (expression -> TkTrue .)
    TkLess          reduce using rule 51 (expression -> TkTrue .)
    TkGreater       reduce using rule 51 (expression -> TkTrue .)
    TkLeq           reduce using rule 51 (expression -> TkTrue .)
    TkGeq           reduce using rule 51 (expression -> TkTrue .)
    TkCBlock        reduce using rule 51 (expression -> TkTrue .)
    TkSemicolon     reduce using rule 51 (expression -> TkTrue .)
    TkFi            reduce using rule 51 (expression -> TkTrue .)
    TkGuard         reduce using rule 51 (expression -> TkTrue .)
    TkEnd           reduce using rule 51 (expression -> TkTrue .)
    TkComma         reduce using rule 51 (expression -> TkTrue .)
    TkClosePar      reduce using rule 51 (expression -> TkTrue .)
    TkTwoPoints     reduce using rule 51 (expression -> TkTrue .)


state 37

    (52) expression -> TkFalse .

    TkArrow         reduce using rule 52 (expression -> TkFalse .)
    TkPlus          reduce using rule 52 (expression -> TkFalse .)
    TkMinus         reduce using rule 52 (expression -> TkFalse .)
    TkMult          reduce using rule 52 (expression -> TkFalse .)
    TkAnd           reduce using rule 52 (expression -> TkFalse .)
    TkOr            reduce using rule 52 (expression -> TkFalse .)
    TkEqual         reduce using rule 52 (expression -> TkFalse .)
    TkNEqual        reduce using rule 52 (expression -> TkFalse .)
    TkLess          reduce using rule 52 (expression -> TkFalse .)
    TkGreater       reduce using rule 52 (expression -> TkFalse .)
    TkLeq           reduce using rule 52 (expression -> TkFalse .)
    TkGeq           reduce using rule 52 (expression -> TkFalse .)
    TkCBlock        reduce using rule 52 (expression -> TkFalse .)
    TkSemicolon     reduce using rule 52 (expression -> TkFalse .)
    TkFi            reduce using rule 52 (expression -> TkFalse .)
    TkGuard         reduce using rule 52 (expression -> TkFalse .)
    TkEnd           reduce using rule 52 (expression -> TkFalse .)
    TkComma         reduce using rule 52 (expression -> TkFalse .)
    TkClosePar      reduce using rule 52 (expression -> TkFalse .)
    TkTwoPoints     reduce using rule 52 (expression -> TkFalse .)


state 38

    (18) statement -> TkWhile expression . TkArrow statement_list TkEnd
    (30) expression -> expression . TkPlus expression
    (31) expression -> expression . TkMinus expression
    (32) expression -> expression . TkMult expression
    (33) expression -> expression . TkAnd expression
    (34) expression -> expression . TkOr expression
    (35) expression -> expression . TkEqual expression
    (36) expression -> expression . TkNEqual expression
    (39) expression -> expression . TkLess expression
    (40) expression -> expression . TkGreater expression
    (41) expression -> expression . TkLeq expression
    (42) expression -> expression . TkGeq expression

    TkArrow         shift and go to state 70
    TkPlus          shift and go to state 52
    TkMinus         shift and go to state 53
    TkMult          shift and go to state 54
    TkAnd           shift and go to state 55
    TkOr            shift and go to state 56
    TkEqual         shift and go to state 57
    TkNEqual        shift and go to state 58
    TkLess          shift and go to state 59
    TkGreater       shift and go to state 60
    TkLeq           shift and go to state 61
    TkGeq           shift and go to state 62


state 39

    (19) statement -> TkPrint expression .
    (30) expression -> expression . TkPlus expression
    (31) expression -> expression . TkMinus expression
    (32) expression -> expression . TkMult expression
    (33) expression -> expression . TkAnd expression
    (34) expression -> expression . TkOr expression
    (35) expression -> expression . TkEqual expression
    (36) expression -> expression . TkNEqual expression
    (39) expression -> expression . TkLess expression
    (40) expression -> expression . TkGreater expression
    (41) expression -> expression . TkLeq expression
    (42) expression -> expression . TkGeq expression
    (24) string -> expression . TkPlus string

    TkCBlock        reduce using rule 19 (statement -> TkPrint expression .)
    TkSemicolon     reduce using rule 19 (statement -> TkPrint expression .)
    TkFi            reduce using rule 19 (statement -> TkPrint expression .)
    TkGuard         reduce using rule 19 (statement -> TkPrint expression .)
    TkEnd           reduce using rule 19 (statement -> TkPrint expression .)
    TkPlus          shift and go to state 71
    TkMinus         shift and go to state 53
    TkMult          shift and go to state 54
    TkAnd           shift and go to state 55
    TkOr            shift and go to state 56
    TkEqual         shift and go to state 57
    TkNEqual        shift and go to state 58
    TkLess          shift and go to state 59
    TkGreater       shift and go to state 60
    TkLeq           shift and go to state 61
    TkGeq           shift and go to state 62


state 40

    (20) statement -> TkPrint string .
    (22) string -> string . TkPlus string
    (23) string -> string . TkPlus expression

    TkCBlock        reduce using rule 20 (statement -> TkPrint string .)
    TkSemicolon     reduce using rule 20 (statement -> TkPrint string .)
    TkFi            reduce using rule 20 (statement -> TkPrint string .)
    TkGuard         reduce using rule 20 (statement -> TkPrint string .)
    TkEnd           reduce using rule 20 (statement -> TkPrint string .)
    TkPlus          shift and go to state 72


state 41

    (50) expression -> TkOpenPar . expression TkClosePar
    (26) string -> TkOpenPar . TkString TkClosePar
    (30) expression -> . expression TkPlus expression
    (31) expression -> . expression TkMinus expression
    (32) expression -> . expression TkMult expression
    (33) expression -> . expression TkAnd expression
    (34) expression -> . expression TkOr expression
    (35) expression -> . expression TkEqual expression
    (36) expression -> . expression TkNEqual expression
    (37) expression -> . TkNot expression
    (38) expression -> . TkMinus expression
    (39) expression -> . expression TkLess expression
    (40) expression -> . expression TkGreater expression
    (41) expression -> . expression TkLeq expression
    (42) expression -> . expression TkGeq expression
    (43) expression -> . TkId TkApp expression
    (44) expression -> . function_mod TkApp expression
    (48) expression -> . TkNum
    (49) expression -> . TkId
    (50) expression -> . TkOpenPar expression TkClosePar
    (51) expression -> . TkTrue
    (52) expression -> . TkFalse
    (45) function_mod -> . function_mod TkOpenPar two_points TkClosePar
    (46) function_mod -> . TkId TkOpenPar two_points TkClosePar

    TkString        shift and go to state 73
    TkNot           shift and go to state 31
    TkMinus         shift and go to state 30
    TkId            shift and go to state 32
    TkNum           shift and go to state 34
    TkOpenPar       shift and go to state 35
    TkTrue          shift and go to state 36
    TkFalse         shift and go to state 37

    expression                     shift and go to state 69
    function_mod                   shift and go to state 33

state 42

    (25) string -> TkString .

    TkPlus          reduce using rule 25 (string -> TkString .)
    TkCBlock        reduce using rule 25 (string -> TkString .)
    TkSemicolon     reduce using rule 25 (string -> TkString .)
    TkFi            reduce using rule 25 (string -> TkString .)
    TkGuard         reduce using rule 25 (string -> TkString .)
    TkEnd           reduce using rule 25 (string -> TkString .)


state 43

    (7) variable_list -> variable_list TkComma variable .
